--- a/Heartdisease.ipynb
+++ b/Heartdisease.ipynb
@@ -1,13 +1,417 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
+   "source": [
+    "# Importing the libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pnd\n",
+    "import numpy as np\n",
+    "from sklearn import preprocessing\n",
+    "from sklearn import neighbors, datasets\n",
+    "from sklearn import cross_validation\n",
+    "from sklearn.linear_model import SGDClassifier\n",
+    "from sklearn import svm\n",
+    "import operator\n",
+    "\n",
+    "from sklearn.cross_validation import KFold\n",
+    "\n",
+    "import itertools\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from sklearn import metrics\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "from sklearn import tree\n",
+    "import seaborn as sns\n",
+    "\n",
+    "\n",
+    "from IPython.display import Image\n",
+    "\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dataset Description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>chest_pain</th>\n",
+       "      <th>blood pressure</th>\n",
+       "      <th>serum_cholestoral</th>\n",
+       "      <th>fasting_blood_sugar</th>\n",
+       "      <th>electrocardiographic</th>\n",
+       "      <th>max_heart_rate</th>\n",
+       "      <th>induced_angina</th>\n",
+       "      <th>ST_depression</th>\n",
+       "      <th>slope</th>\n",
+       "      <th>vessels</th>\n",
+       "      <th>thal</th>\n",
+       "      <th>diagnosis</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>63.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>145.0</td>\n",
+       "      <td>233.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>67.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>286.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>108.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>67.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>229.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>129.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>37.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>187.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>41.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>204.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>172.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    age  sex  chest_pain  blood pressure  serum_cholestoral  \\\n",
+       "0  63.0  1.0         1.0           145.0              233.0   \n",
+       "1  67.0  1.0         4.0           160.0              286.0   \n",
+       "2  67.0  1.0         4.0           120.0              229.0   \n",
+       "3  37.0  1.0         3.0           130.0              250.0   \n",
+       "4  41.0  0.0         2.0           130.0              204.0   \n",
+       "\n",
+       "   fasting_blood_sugar  electrocardiographic  max_heart_rate  induced_angina  \\\n",
+       "0                  1.0                   2.0           150.0             0.0   \n",
+       "1                  0.0                   2.0           108.0             1.0   \n",
+       "2                  0.0                   2.0           129.0             1.0   \n",
+       "3                  0.0                   0.0           187.0             0.0   \n",
+       "4                  0.0                   2.0           172.0             0.0   \n",
+       "\n",
+       "   ST_depression  slope vessels thal  diagnosis  \n",
+       "0            2.3    3.0     0.0  6.0          0  \n",
+       "1            1.5    2.0     3.0  3.0          2  \n",
+       "2            2.6    2.0     2.0  7.0          1  \n",
+       "3            3.5    3.0     0.0  3.0          0  \n",
+       "4            1.4    1.0     0.0  3.0          0  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# add the rows names\n",
+    "header_row = ['age','sex','chest_pain','blood pressure','serum_cholestoral','fasting_blood_sugar',\\\n",
+    "               'electrocardiographic','max_heart_rate','induced_angina','ST_depression','slope','vessels','thal','diagnosis']\n",
+    "\n",
+    "# read csv file with Cleveland heart diseases data\n",
+    "heart = pnd.read_csv('heart.csv', names=header_row)\n",
+    "heart[:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Exploration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>chest_pain</th>\n",
+       "      <th>blood pressure</th>\n",
+       "      <th>serum_cholestoral</th>\n",
+       "      <th>fasting_blood_sugar</th>\n",
+       "      <th>electrocardiographic</th>\n",
+       "      <th>max_heart_rate</th>\n",
+       "      <th>induced_angina</th>\n",
+       "      <th>ST_depression</th>\n",
+       "      <th>slope</th>\n",
+       "      <th>diagnosis</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>303.000000</td>\n",
+       "      <td>303.000000</td>\n",
+       "      <td>303.000000</td>\n",
+       "      <td>303.000000</td>\n",
+       "      <td>303.000000</td>\n",
+       "      <td>303.000000</td>\n",
+       "      <td>303.000000</td>\n",
+       "      <td>303.000000</td>\n",
+       "      <td>303.000000</td>\n",
+       "      <td>303.000000</td>\n",
+       "      <td>303.000000</td>\n",
+       "      <td>303.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>54.438944</td>\n",
+       "      <td>0.679868</td>\n",
+       "      <td>3.158416</td>\n",
+       "      <td>131.689769</td>\n",
+       "      <td>246.693069</td>\n",
+       "      <td>0.148515</td>\n",
+       "      <td>0.990099</td>\n",
+       "      <td>149.607261</td>\n",
+       "      <td>0.326733</td>\n",
+       "      <td>1.039604</td>\n",
+       "      <td>1.600660</td>\n",
+       "      <td>0.937294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>9.038662</td>\n",
+       "      <td>0.467299</td>\n",
+       "      <td>0.960126</td>\n",
+       "      <td>17.599748</td>\n",
+       "      <td>51.776918</td>\n",
+       "      <td>0.356198</td>\n",
+       "      <td>0.994971</td>\n",
+       "      <td>22.875003</td>\n",
+       "      <td>0.469794</td>\n",
+       "      <td>1.161075</td>\n",
+       "      <td>0.616226</td>\n",
+       "      <td>1.228536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>94.000000</td>\n",
+       "      <td>126.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>71.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>48.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>120.000000</td>\n",
+       "      <td>211.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>133.500000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>56.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>130.000000</td>\n",
+       "      <td>241.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>153.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.800000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>61.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>140.000000</td>\n",
+       "      <td>275.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>166.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.600000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>77.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>200.000000</td>\n",
+       "      <td>564.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>202.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>6.200000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              age         sex  chest_pain  blood pressure  serum_cholestoral  \\\n",
+       "count  303.000000  303.000000  303.000000      303.000000         303.000000   \n",
+       "mean    54.438944    0.679868    3.158416      131.689769         246.693069   \n",
+       "std      9.038662    0.467299    0.960126       17.599748          51.776918   \n",
+       "min     29.000000    0.000000    1.000000       94.000000         126.000000   \n",
+       "25%     48.000000    0.000000    3.000000      120.000000         211.000000   \n",
+       "50%     56.000000    1.000000    3.000000      130.000000         241.000000   \n",
+       "75%     61.000000    1.000000    4.000000      140.000000         275.000000   \n",
+       "max     77.000000    1.000000    4.000000      200.000000         564.000000   \n",
+       "\n",
+       "       fasting_blood_sugar  electrocardiographic  max_heart_rate  \\\n",
+       "count           303.000000            303.000000      303.000000   \n",
+       "mean              0.148515              0.990099      149.607261   \n",
+       "std               0.356198              0.994971       22.875003   \n",
+       "min               0.000000              0.000000       71.000000   \n",
+       "25%               0.000000              0.000000      133.500000   \n",
+       "50%               0.000000              1.000000      153.000000   \n",
+       "75%               0.000000              2.000000      166.000000   \n",
+       "max               1.000000              2.000000      202.000000   \n",
+       "\n",
+       "       induced_angina  ST_depression       slope   diagnosis  \n",
+       "count      303.000000     303.000000  303.000000  303.000000  \n",
+       "mean         0.326733       1.039604    1.600660    0.937294  \n",
+       "std          0.469794       1.161075    0.616226    1.228536  \n",
+       "min          0.000000       0.000000    1.000000    0.000000  \n",
+       "25%          0.000000       0.000000    1.000000    0.000000  \n",
+       "50%          0.000000       0.800000    2.000000    0.000000  \n",
+       "75%          1.000000       1.600000    2.000000    2.000000  \n",
+       "max          1.000000       6.200000    3.000000    4.000000  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get statistics values\n",
+    "heart.describe()"
+   ]
   }
  ],
  "metadata": {
